apps/cyberchef/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyberchef-svc
  namespace: tools
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: cyberchef
  type: ClusterIP
